--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@thinairthings/mouse-utils",
   "version": "1.0.1",
   "description": "Thin Air Mouse Utils",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/mouse-utils/src/index.js",
+  "types": "dist/mouse-utils/src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/ThinAirThings/mouse-utils.git"
