--- a/package.json
+++ b/package.json
@@ -18,5 +18,7 @@
   "keywords": [],
   "author": "Dan Lannan",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "@types/react": "^18.2.6"
+  }
 }
