--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
     "url": "https://github.com/ThinAirThings/mouse-utils.git"
   },
   "scripts": {
-    "npmpub": "tsc && git add . && git commit -m \"mod\" && git push && npm version patch && npm publish"
-  },
-  "publishConfig": {
-    "registry": "https://npm.pkg.github.com/",
-    "access": "public"
+    "npmpub": "tsc && git add . && git commit -m \"mod\" && git push && npm version patch && npm publish --access public"
   },
   "keywords": [],
   "author": "Dan Lannan",
